--- a/discord_bot/.env
+++ b/discord_bot/.env
@@ -1,3 +1,3 @@
 GOOGLE_GENAI_USE_VERTEXAI=0
-GOOGLE_API_KEY=AIzaSyDSe-TMd9F4-RHpycurLTH7sFOXFQ-RfTY
-DISCORD_TOKEN=MTM3ODQxNzU3NDA0NzY0OTgyMg.Ge2gcu.ho7erEN6WSbbC3_EjD72lVNqgsnE4-Jb15RFjM
+GOOGLE_API_KEY=
+DISCORD_TOKEN=
